trustfall_core/src/resources/test_data/valid_queries/alias_and_prefix_output_names.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Zero {
        zero: value @output

        succ_: successor {
            is_named: name @output
        }
    }
}"#,
    arguments: {},
)
