trustfall_core/src/resources/test_data/parse_errors/output_name_with_multiple_invalid_chars.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @output(name: "name with-various $%^&# chars!")
    }
}"#,
    arguments: {},
)
